--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,73 +36,22 @@ services:
     fluentd:
         build:
             context: . 
-            dockerfile: ./side_project/shopee_crawler/fluentd/Dockerfile
+            dockerfile: ./side_project/fluentd/Dockerfile
         ports:
             - 9880:9880
           #      - 24224:24224/udp
         volumes:
             - fluentd:/fluentd/log
-#   category_crawler:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/shopee_crawler/category_crawler/Dockerfile
-#       depends_on:
-#           - postgres
-#       environment:
-#           - POSTGRES_DB=db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_crawler.py"]
-#   shopee_crawler_routine:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/shopee_crawler/crawler_routine/Dockerfile
-#       environment:
-#           - POSTGRES_DB=db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432  
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#   category_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/shopee_crawler/category_worker/Dockerfile
-#       depends_on:
-#           - rabbitmq
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
-#   product_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/shopee_crawler/product_worker/Dockerfile
-#       depends_on:
-#           - rabbitmq
-#           - fluentd
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#           - FLUENTD_HOST=fluentd
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
-    shopee_restful_api_service:
+    restful_api_service:
         build:
             context: .
             dockerfile: ./side_project/restful_api/Dockerfile
         depends_on:
             - postgres
         environment:
-           #- POSTGRES_DB=pinkoi_db
-            - POSTGRES_DB=rakuten_db
+            - POSTGRES_SHOPEE_DB=shopee_db
+            - POSTGRES_RAKUTEN_DB=rakuten_db
+            - POSTGRES_PINKOI_DB=pinkoi_db
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=mypass
             - POSTGRES_HOST=postgres
@@ -125,7 +74,7 @@ services:
 #           context: .
 #           dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
 #       environment:
-#           - POSTGRES_DB=db
+#           - POSTGRES_DB=shopee_db
 #           - POSTGRES_USER=admin
 #           - POSTGRES_PASSWORD=mypass
 #           - POSTGRES_HOST=postgres
@@ -135,6 +84,135 @@ services:
 #           - AWS_DEFAULT_REGION=ap-northeast-1
 #       volumes:
 #           - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
+#   shopee_category_crawler:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/shopee/category_crawler/Dockerfile
+#       depends_on:
+#           - postgres
+#       environment:
+#           - POSTGRES_DB=shopee_db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_crawler.py"]
+#   shopee_crawler_routine:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/shopee/crawler_routine/Dockerfile
+#       environment:
+#           - POSTGRES_DB=shopee_db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432  
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#   shopee_category_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/shopee/category_worker/Dockerfile
+#       depends_on:
+#           - rabbitmq
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
+#   shopee_product_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/shopee/product_worker/Dockerfile
+#       deploy:
+#           replicas: 8
+#       depends_on:
+#           - rabbitmq
+#           - fluentd
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#           - FLUENTD_HOST=fluentd
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+#   rakuten_crawler_routine:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/rakuten/crawler_routine/Dockerfile
+#       environment:
+#           - POSTGRES_DB=rakuten_db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432  
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#   rakuten_category_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/rakuten/category_worker/Dockerfile
+#       deploy:
+#           replicas: 8
+#       depends_on:
+#           - rabbitmq
+#           - fluentd
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#           - FLUENTD_HOST=fluentd
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
+#   rakuten_product_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/rakuten/product_worker/Dockerfile
+#       deploy:
+#           replicas: 50
+#       depends_on:
+#           - rabbitmq
+#           - fluentd
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#           - FLUENTD_HOST=fluentd
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+#   pinkoi_crawler_routine:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/pinkoi/crawler_routine/Dockerfile
+#       environment:
+#           - POSTGRES_DB=pinkoi_db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432  
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#   pinkoi_product_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/crawler/pinkoi/product_worker/Dockerfile
+#       deploy:
+#           replicas: 30
+#       depends_on:
+#           - rabbitmq
+#           - fluentd
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#           - FLUENTD_HOST=fluentd
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+    
 
 volumes:
     postgres:
