--- a/side_project/restful_api/alembic.ini
+++ b/side_project/restful_api/alembic.ini
@@ -2,7 +2,9 @@
 
 [DEFAULT]
 # path to migration scripts
-sqlalchemy.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_DB)s
+sqlalchemy.shopee.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_SHOPEE_DB)s
+sqlalchemy.rakuten.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_RAKUTEN_DB)s
+sqlalchemy.pinkoi.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_PINKOI_DB)s
 
 [shopee_schema]
 script_location = /shopee/migrations
